--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "private": true,
   "dependencies": {
     "@google/genai": "^1.3.0",
+    "@react-three/drei": "^9.99.5",
+    "@react-three/fiber": "^8.15.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.176.0",
     "buffer": "^6.0.3",
+    "classnames": "^2.5.1",
+    "events": "^3.3.0",
     "mime": "^4.0.7",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.80.6",
+    "three": "^0.176.0",
+    "three-stdlib": "^2.36.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
