--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@ public/model/ayla.glb filter=lfs diff=lfs merge=lfs -text
 public/model/ayla.fbx filter=lfs diff=lfs merge=lfs -text
 public/model/ayla.zip filter=lfs diff=lfs merge=lfs -text
 public/model/motion.glb filter=lfs diff=lfs merge=lfs -text
+public/model/*.glb filter=lfs diff=lfs merge=lfs -text
